trying to install required packages

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -15,5 +15,4 @@ formats:
 python:
   # Install our python package before building the docs
   install:
-    - method: pip
-      path: .
+   - requirements: requirements.txt
