--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "reddit_photo_aggregator"
-version = "1.0.2"
+version = "1.0.3"
 authors = [
   { name="hamolicious", email="hamolicious@outlook.com" },
 ]
@@ -12,6 +12,11 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+dependencies = [
+	"beautifulsoup4==4.12.2",
+	"requests==2.31.0",
+	"bs4==0.0.1"
+]
 
 [project.urls]
 "Homepage" = "https://github.com/hamolicious/Reddit-Photo-Aggregator"
@@ -20,8 +25,5 @@ classifiers = [
 [build-system]
 requires = [
 	"setuptools>=61.0",
-	"beautifulsoup4==4.12.2",
-	"requests==2.31.0",
-	"bs4==0.0.1"
 ]
 build-backend = "setuptools.build_meta"
